--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <p>Hello World!</p>
 
+    <p>Hello World, we are developers</p>
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
