--- a/index.html
+++ b/index.html
@@ -7,11 +7,44 @@
   </head>
 
   <body>
-    <p>Hello World!</p>
+    <p>Hello World, we are software developers!</p>
+
+    <main id="main">
+      <h1 id="title"> Tribute</h1>
+      <p>tribute</p>
+      <figure id="img-div">
+        <img
+          id="image"
+          src="www.image.com"
+          alt="image"
+        />
+        <figcaption id="img-caption">
+          figcaption
+          </figcaption>
+      </figure>
+      <section id="tribute-info">
+        <h3 id="headline">Headline</h3>
+        <ul>
+          <li><strong>date</strong> </li>
+          <li>
+            <strong>date</strong>
+          </li>
+          <li>
+            <strong>date</strong>
+          </li>
+
+          <a
+            id="tribute-link"
+            href="#tributelink"
+            target="_blank"
+            >Tribute link</a>
+        </section>
+        
+
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
+    <!--xz
 
     Hello Camper!
 
